WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212762
REGRESSION (
r262456
?): [macOS] media/picture-in-picture/picture-in-picture-api tests are flaky timeouts
https://bugs.webkit.org/show_bug.cgi?id=212762
Summary
REGRESSION (r262456?): [macOS] media/picture-in-picture/picture-in-picture-ap...
Ryan Haddad
Reported
2020-06-04 10:51:17 PDT
The following two tests recently became flaky timeouts on Catalina and Mojave media/picture-in-picture/picture-in-picture-api-enter-pip-4.html media/picture-in-picture/picture-in-picture-api-exit-pip-1.html
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=media%2Fpicture-in-picture%2Fpicture-in-picture-api-enter-pip-4.html&test=media%2Fpicture-in-picture%2Fpicture-in-picture-api-exit-pip-1.html
Attachments
Patch
(3.26 KB, patch)
2020-06-04 14:06 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Revise the patch to fix test failures
(3.58 KB, patch)
2020-06-04 16:22 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Fix the API test failure
(6.60 KB, patch)
2020-06-05 00:55 PDT
,
Peng Liu
eric.carlson
: review+
Details
Formatted Diff
Diff
Rebase the patch
(6.55 KB, patch)
2020-06-05 09:48 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-04 10:51:43 PDT
<
rdar://problem/63985839
>
Ryan Haddad
Comment 2
2020-06-04 11:04:48 PDT
This started shortly after the following change landed: Stressing webkitSetPresentationMode leads to wrong inline video dimensions
https://bugs.webkit.org/show_bug.cgi?id=202425
Ryan Haddad
Comment 3
2020-06-04 12:40:41 PDT
Same with media/picture-in-picture/picture-in-picture-api-pip-window.html
https://results.webkit.org/?suite=layout-tests&test=media%2Fpicture-in-picture%2Fpicture-in-picture-api-pip-window.html
Peng Liu
Comment 4
2020-06-04 14:06:18 PDT
Created
attachment 401077
[details]
Patch
Darin Adler
Comment 5
2020-06-04 14:25:01 PDT
Comment on
attachment 401077
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401077&action=review
> Source/WebKit/ChangeLog:10 > + The Picture-in-Picture implementation expects the two callbacks HTMLVideoElement::didBecomeFullscreenElement() > + and HTMLVideoElement::setVideoFullscreenFrame() to come in order. So we need to remove the dispatch_async() to > + call HTMLVideoElement::didBecomeFullscreenElement().
That’s the benefit of removing the dispatch_async. But why is it safe to remove dispatch_async?
Peng Liu
Comment 6
2020-06-04 14:49:07 PDT
Comment on
attachment 401077
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401077&action=review
>> Source/WebKit/ChangeLog:10 >> + call HTMLVideoElement::didBecomeFullscreenElement(). > > That’s the benefit of removing the dispatch_async. > > But why is it safe to remove dispatch_async?
The dispatch_async() was added in
r229714
because of some issue on Watch, and I have discussed it with Eric. Removing it seems fine for now.
Peng Liu
Comment 7
2020-06-04 16:22:39 PDT
Created
attachment 401090
[details]
Revise the patch to fix test failures
Peng Liu
Comment 8
2020-06-05 00:55:12 PDT
Created
attachment 401129
[details]
Fix the API test failure
Peng Liu
Comment 9
2020-06-05 09:48:22 PDT
Created
attachment 401165
[details]
Rebase the patch
EWS
Comment 10
2020-06-05 11:02:45 PDT
Committed
r262634
: <
https://trac.webkit.org/changeset/262634
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401165
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug