REGRESSION (r262456?): [macOS] media/picture-in-picture/picture-in-picture-api tests are flaky timeouts https://bugs.webkit.org/show_bug.cgi?id=212762

Reviewed by Eric Carlson.

Source/WebKit:

The Picture-in-Picture implementation expects the two callbacks HTMLVideoElement::didBecomeFullscreenElement()
and HTMLVideoElement::setVideoFullscreenFrame() to come in order. So we need to remove the dispatch_async()
and call HTMLVideoElement::didBecomeFullscreenElement() directly.

* WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::VideoFullscreenManager::didEnterFullscreen):

Tools:

Skip the Picture-in-Picture test if Picture-in-Picture is not supported and add playsinline attribute
to the video element.

* TestWebKitAPI/Tests/WebKitCocoa/WKWebViewCloseAllMediaPresentations.mm:
(TEST):

LayoutTests:

Skip the tests regarding Picture-in-Picture for mac-wk1.

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/225637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262634 268f45cc-cd09-0410-ab3c-d52691b4dbfc